[Fountain Pen Slide] Set up slide with dummy text, buttons, work on video positioning to ensure covering Inquiry header button on all desktop sizes

--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -173,22 +173,39 @@ body {
                 }
                 &exteriorLightToggle {
                     .toggleLights {
-                        top: calc(#{$header-height} + 30px);
                         position: absolute;
+                        top: calc(#{$header-height} + 30px);
                         right: calc(#{$side-margin} + 30px);
-                        cursor: pointer;
-                        text-align: center;
-                        border: rgba(255, 255, 255, 0.7) solid 1px;
                         z-index: 1;
-                        text-transform: uppercase;
-                        padding: 15px;
-                        color: #fff;
-                        width: 150px;
                         &:hover,
                         .on {
                             background-color: #fff;
                             color: #000;
                         }
+                    }
+                }
+                &fountainPen {
+                    .textSection {
+                        position: absolute;
+                        left: calc(50px + #{$side-margin});
+                        top: calc(50px + #{$header-height});
+                        height: calc(100vh - #{$header-height}*2);
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        > p {
+                            margin-top: 1em;
+                            text-align: justify;
+                            width: 50%;
+                        }
+                        .btn {
+                            margin-top: 1em;
+                        }
+                    }
+                    .videoContainer .background-video {
+                        height: 100vh;
+                        width: 100vw;
+                        object-position: top right;
                     }
                 }
             }
@@ -200,6 +217,30 @@ body {
                             //the object-position transitions are only used in mobile but for simplicity they are set here
                             transition: object-position $slideAnimationDuration linear 0s, transform 1.2s ease-out 1.2s;
                         }
+                    }
+                }
+            }
+            h2 {
+                text-transform: uppercase;
+                font-size: 40px;
+                font-family: "Gotham-Thin";
+            }
+            .btn {
+                cursor: pointer;
+                text-align: center;
+                border: rgba(255, 255, 255, 0.7) solid 1px;
+                color: #fff;
+                z-index: 1;
+                text-transform: uppercase;
+                padding: 15px;
+                width: 170px;
+                &.dark {
+                    background-color: #000;
+                    color: #ffffff;
+                    &:hover {
+                        background-color: #fff;
+                        color: #000;
+                        border-color: #000;
                     }
                 }
             }
